  [Claudio Schill]
  * Optimized the Kuehn sigma_mu_adjustment calculation by replacing the
    multi-step interpolation with a single 2D/3D space interpolation

  [Michele Simionato]
  * Fixed a bug in calculations with a filtered site collection using the
    HM2018CorrelationModel
  * Internal: raised a clear error message when get_composite_source_model is
   called without passing a datastore in presence of multifault sources

  [Christopher Brooks]
  * Added non-ergodic implementation of Zhao et al. (2016) GMM (ray-tracing
    of travel paths through anelastically attenuating volcanic regions and
    subsequent adjustment of the path term based on this distance to reduce
    the predicted ground-motion).

  [Michele Simionato]
  * Optimized (2x) the generation of ground motion fields
  * Internal: using a single random number generator inside the GmfComputer
    and not one for each gsim, causing an artificial correlation between gsims
  * Implemented `maximum_distance_stations` and fixed another site
    collection filtering bug in conditioned GMFs
  * Extended conditioned GMFs to number_of_ground_motion_fields > 1
  * Disabled SLOW MODE on macOS, since the amount of free memory returned by
    psutil cannot be trusted
  * Speeding up `count_ruptures` for multifault sources, which gives a *huge*
    in some calculations (like event_based for Dominican Republic)

  [Marco Pagani]
  * Fixed a bug in the code that resamples a line, with a small effect
    on the hazard of models containing simple fault sources

  [Michele Simionato]
  * Optimized the calculation of quantile hazard maps (7x)
  * Internal: stored `_rates` instead of `_poes` in classical calculations

  [Lana Todorovic, Anirudh Rao]
  * Added several regional liquefaction models to the secondary perils module,
    including:
    ZhuEtAl2017LiquefactionCoastal and ZhuEtAl2017LiquefactionGeneral,
    RashidianBaise2020Liquefaction, AllstadtEtAl2022Liquefaction,